--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+    implementation 'com.jsibbold:zoomage:1.3.1'
 }
