--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.MTM"
         tools:targetApi="31">
         <activity
+            android:name=".ColumnistsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MagazineFirstPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewspaperFullPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".NewspaperFirstPageActivity"
             android:exported="false" />
         <activity
