--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.MTM"
         tools:targetApi="31">
         <activity
+            android:name=".VisualMediaDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VisualMediaActivity"
+            android:exported="false" />
+        <activity
             android:name=".ColumnistsActivity"
             android:exported="false" />
         <activity
