--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MTM"
         tools:targetApi="31">
         <activity
+            android:name=".activity.SelimActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.CansinActivity"
             android:exported="false" />
         <activity
@@ -21,6 +24,9 @@
             android:exported="false" />
         <activity
             android:name=".activity.MesutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.Mesut2Activity"
             android:exported="false" />
         <activity
             android:name=".activity.ColumnistsShowActivity"
